Rename Home.ejs to base.ejs create template route

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -14,17 +14,17 @@
     <ul class="navbar-nav mr-auto">
 
       <li class="nav-item">
-        <a class="nav-link" href="/">Blood donation</a>
+        <a class="nav-link" href="link_1">Blood donation</a>
+      </li>
+      <li class="nav-item">http://localhost:3000/
+        <a class="nav-link" href="link_2">Blood donation 1</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/">Blood donation 1</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/">Blood Donation 2</a>
+        <a class="nav-link" href="link_3">Blood Donation 2</a>
       </li>
       
       <li class="nav-item">
-        <a class="nav-link " href="/">Login</a>
+        <a class="nav-link " href="login">Login</a>
       </li>
     </ul>
   </div>
