./config file change

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -61,6 +61,7 @@
                       
                       <hr class="my-4">
                       <p style="text-align: center">Login or Register with Google account</p>
+                      <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Register in with Google</button>
                       <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Sign in with Google</button>
                     </div>
                     </form>
