Made Change in Nav template

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -16,7 +16,7 @@
       <li class="nav-item">
         <a class="nav-link" href="link_1">Blood donation</a>
       </li>
-      <li class="nav-item">http://localhost:3000/
+      <li class="nav-item">
         <a class="nav-link" href="link_2">Blood donation 1</a>
       </li>
       <li class="nav-item">
